2011-10-05 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Eliminate compiler warning.

    * src/gtk-sat-list.c
    * src/gtk-single-sat.c
    * src/gtk-sat-map.h
    * src/predict-tools.h
    Use signed 32 bit integers for orbit counts.

2011-10-03 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view-popup.c
    Fix segfault when turning on and off skytrack. Bug 3417553: Gpredict crashes.

2011-10-02 Charles Suprin <hamaa1vs at gmail.com>

   * src/sgpsdp/sgp4sdp4.h
   * src/gtk-sat-map-ground-track.c
   Make groundtrack show on orbit zero. (bug 3416451: No ground track for new satellites)

2011-10-02 Charles Suprin <hamaa1vs at gmail.com>

   * src/gtk-sat-map.c
   * src/gtk-sat-map-ground-track.c
   Delete ground track of decayed satellite.


2011-10-01 Alexandru Csete <oz9aec at gmail.com>

   * src/gtk-sat-moduile-tmg.c:
   Use GTK_STOCK_MEDIA_FORWARD and REWIND (bug 3309111: Wrong icon in time
   controller).


2011-09-28 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/config-keys.c
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    Save and restore sort information for event lists.

    * ChangeLog
    * src/config-keys.c
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    Save and restore sort information for satellite lists.


2011-09-25 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Fix bugs in tle-update for two line tle's at end of file.

    * ChangeLog
    * src/gtk-sat-selector.c
    * src/mod-cfg.c
    Update sort routines to include catalog number to handle ties in name.


2011-09-22 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-polar-view.c
    * src/gtk-polar-view-popup.c
    Saves polarview showtrack information from one session to another.

    * ChangeLog
    * src/first-time.c
    * src/gpredict-utils.c
    * src/gpredict-utils.h
    * src/mod-cfg.c
    * src/qth-data.c
    * src/radio-conf.c
    * src/rotor-conf.c