@@ -18,6 +18,7 @@ Changes in version 1.4 (TBD)
 - Fixed bug 3413571: UARS Ground Track not Updated on TLE update.
 - Fixed bug 3416451: No ground track for new satellites.
 - Fixed bug 3417553: Gpredict crashes
+- Fixed bug 3419879: gpredict doesn't change the satellite names on world map.
 
 Changes in version 1.3 (1 Mar 2011)
 
