@@ -1,3 +1,10 @@
+2011-10-07 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/gtk-polar-view.c
+    * src/gtk-sat-map.c
+    Update label as part of satellite update.
+
+
 2011-10-05 Charles Suprin <hamaa1vs at gmail.com>
 
     * src/gtk-rot-ctrl.c
